Segundo commit do projeto.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <figure><img src="public/images/image 2.png"></figure>
         <figure><img src="public/images/image 3.png"></figure>
         <figure><img src="public/images/image 4.png"></figure>
-        <figure><img class="imagemteste" src="public/images/image 5.png"></figure>
+        <figure><img src="public/images/image 5.png"></figure>
         <figure><img src="public/images/image 6.png"></figure>
         <figure><img src="public/images/image 7.png"></figure>
         <figure><img src="public/images/image 8.png"></figure>
