--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="https://forgattin.github.io/forgascoffe/style.css">
   <title>ForgasCoffe</title>
   <meta name="description" content="Explore dezenas de variações da bebida favorita entre os devs ao redor mundo!">
 </head>
