--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             </header>
             <p class="receita-descricao">Essa receita aqui comprova que não tem como ficar sem leite em casa! Seja vegetal, animal ou em pó, seu leite para deixar suas receitas deliciosas. </p>
             <div class="receita-autor">
-              <img src="/public/images/kleber.png" alt="Kleber Pita">
+              <img src="public/images/kleber.png" alt="Kleber Pita">
               <span class="receita-autor-nome">Kleber Pita</span>
             </div>
           </div>
