--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             </header>
             <p class="receita-descricao">Receita de Cappucino alemão original, como é conhecido nas cafeterias de cafés especiais. 😍</p>
             <div class="receita-autor">
-              <img src="/public/images/lanngrr.png" alt="Alan Germano">
+              <img src="public/images/lanngrr.png" alt="Alan Germano">
               <span class="receita-autor-nome">Alan Germano</span>
             </div>
           </div>
@@ -86,7 +86,7 @@
             </header>
             <p class="receita-descricao">Descubra a receita de Chocolate quente cremoso para fazer em 5 minutos.</p>
             <div class="receita-autor">
-              <img src="/public/images/kaiten.png" alt="Caio Reis">
+              <img src="public/images/kaiten.png" alt="Caio Reis">
               <span class="receita-autor-nome">Caio Reis</span>
             </div>
           </div>
@@ -102,7 +102,7 @@
             </header>
             <p class="receita-descricao">Uma bebida ideal para os amantes de limão e cremosidade. 😍</p>
             <div class="receita-autor">
-              <img src="/public/images/danp.png" alt="Daniel Pepe">
+              <img src="public/images/danp.png" alt="Daniel Pepe">
               <span class="receita-autor-nome">Daniel Pepe</span>
             </div>
           </div>
